# src/main/java/me/zort/iis/server/iisserver/domain/access/Privilege.java
@@ -1,0 +1,6 @@
+package me.zort.iis.server.iisserver.domain.access;
+
+public enum Privilege {
+    MANAGE_USERS,
+
+}
