# src/main/java/me/zort/iis/server/iisserver/http/controller/UsersController.java
@@ -5,12 +5,16 @@ import lombok.RequiredArgsConstructor;
 import me.zort.iis.server.iisserver.cqrs.OperationExecutor;
 import me.zort.iis.server.iisserver.cqrs.operation.user.ChangeUserRoleOp;
 import me.zort.iis.server.iisserver.cqrs.operation.user.DeleteUserOp;
+import me.zort.iis.server.iisserver.cqrs.operation.user.GetPrivilegesForUserOp;
+import me.zort.iis.server.iisserver.domain.access.Privilege;
 import me.zort.iis.server.iisserver.domain.user.User;
 import me.zort.iis.server.iisserver.http.model.BlankResponse;
 import me.zort.iis.server.iisserver.http.model.user.ChangeUserRoleRequest;
 import me.zort.iis.server.iisserver.http.model.user.IdentityResponse;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -19,7 +23,12 @@ public class UsersController {
 
     @GetMapping("/users/me")
     public IdentityResponse getIdentity(@AuthenticationPrincipal User user) {
-        return new IdentityResponse(user);
+        GetPrivilegesForUserOp op = GetPrivilegesForUserOp.builder()
+                .user(user)
+                .build();
+        List<Privilege> privileges = operationExecutor.dispatch(op);
+
+        return new IdentityResponse(user, privileges);
     }
 
     @DeleteMapping("/users/{id}")
